# project-root-finder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/project_root_finder/: __init__.py  root_finder.py
